--- a/pom.xml
+++ b/pom.xml
@@ -48,9 +48,15 @@
     </dependency>
 
     <dependency>
-        <groupId>com.hankcs</groupId>
-        <artifactId>hanlp</artifactId>
-        <version>portable-1.6.8</version>
+      <groupId>com.hankcs</groupId>
+      <artifactId>hanlp</artifactId>
+      <version>portable-1.6.8</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.janeluo</groupId>
+      <artifactId>ikanalyzer</artifactId>
+      <version>2012_u6</version>
     </dependency>
 
     <dependency>
