--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=dev
 server.port=9001
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 #spring.session.store-type=jdbc
 #spring.session.jdbc.initialize-schema=always
 #server.servlet.session.timeout=30d
