--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,7 @@ deploy-test:
   variables:
     GIT_STRATEGY: none
     BIND_ADDRESS: 172.16.209.197:9021
+    MIN_MEMORY: 1024m
     MAX_MEMORY: 1024m
     MEMORY_NEW_RATIO: 3
   <<: *deploy_definition
@@ -114,7 +115,8 @@ deploy-preprod:
   variables:
     GIT_STRATEGY: none
     BIND_ADDRESS: 172.16.209.197:9022
-    MAX_MEMORY: 4096m
+    MIN_MEMORY: 1024m
+    MAX_MEMORY: 2048m
     MEMORY_NEW_RATIO: 3
   <<: *deploy_definition
 
@@ -131,6 +133,7 @@ deploy-prod:
   variables:
     GIT_STRATEGY: none
     BIND_ADDRESS: 172.16.209.197:9023
-    MAX_MEMORY: 4096m
+    MIN_MEMORY: 1024m
+    MAX_MEMORY: 2048m
     MEMORY_NEW_RATIO: 3
   <<: *deploy_definition
