--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,37 +88,37 @@ deploy-test:
     - deploy
   environment:
     name: test
-    url: 118.31.10.105
+    url: 116.62.144.95
   only:
     - develop
     - /^feature\/.*$/
   variables:
     GIT_STRATEGY: none
-    BIND_ADDRESS: 172.16.209.197:9021
+    BIND_ADDRESS: 172.16.209.200:9021
     MIN_MEMORY: 1024m
     MAX_MEMORY: 1024m
     MEMORY_NEW_RATIO: 3
   <<: *deploy_definition
 
-deploy-preprod:
-  stage: deploy_preprod
-  tags:
-    - deploy
-  environment:
-    name: preprod
-    url: 118.31.10.105
-  when: manual
-  only:
-    - master
-    - relesae
-    - /^hotfix\-[0-9]+$/
-  variables:
-    GIT_STRATEGY: none
-    BIND_ADDRESS: 172.16.209.197:9022
-    MIN_MEMORY: 1024m
-    MAX_MEMORY: 2048m
-    MEMORY_NEW_RATIO: 3
-  <<: *deploy_definition
+#deploy-preprod:
+#  stage: deploy_preprod
+#  tags:
+#    - deploy
+#  environment:
+#    name: preprod
+#    url: 118.31.10.105
+#  when: manual
+#  only:
+#    - master
+#    - relesae
+#    - /^hotfix\-[0-9]+$/
+#  variables:
+#    GIT_STRATEGY: none
+#    BIND_ADDRESS: 172.16.209.197:9022
+#    MIN_MEMORY: 1024m
+#    MAX_MEMORY: 2048m
+#    MEMORY_NEW_RATIO: 3
+#  <<: *deploy_definition
 
 deploy-prod:
   stage: deploy_prod
@@ -126,13 +126,13 @@ deploy-prod:
     - deploy
   environment:
     name: prod
-    url: 118.31.10.105
+    url: 116.62.144.95
   when: manual
   only:
     - master
   variables:
     GIT_STRATEGY: none
-    BIND_ADDRESS: 172.16.209.197:9023
+    BIND_ADDRESS: 172.16.209.200:9023
     MIN_MEMORY: 1024m
     MAX_MEMORY: 2048m
     MEMORY_NEW_RATIO: 3
