--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ malgo.config.staff-evaluate-cron=0 0 4 * * 2008
 malgo.config.block-rate-update-cron=0 0 4 * * 2008
 malgo.config.expiration-time-cron=0 0 4 * * 2008
 
+pro.serverApiUrl=http://prod.insurance.malgo.cn
+
